# Blockchain-based-secure-voting-system

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dfx.json
.github/workflows/: ci.yml
canister/: Cargo.toml  canister.did
canister/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/voting_crypto/: Cargo.toml
crates/voting_crypto/src/: bsgs.rs  elgamal.rs  error.rs  lib.rs  nullifier.rs  proof.rs  range_proof.rs  serde_utils.rs
