[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ic-agent = "0.34"
candid = "0.10"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
voting_crypto = { path = "../crates/voting_crypto" }
rand = "0.8"
hex = "0.4"
anyhow = "1.0"
