[package]
name = "voting_crypto"
version = "0.1.0"
edition = "2021"
description = "BN254 ElGamal homomorphic encryption, Chaum-Pedersen ZK proofs, and nullifiers for electronic voting."

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
candid = "0.10"
hex = "0.4"
thiserror = "1.0"
